# AI-PC-Builder

./: .gitignore  README.md  compatability.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  backup-app.tsx  constants.ts  styles.css  types.ts  utils.test.ts  utils.ts
frontend/src/components/: AIOutput.tsx  AutoComplete.tsx  Compatibility.tsx  ModeSelect.tsx  Selections.tsx
frontend/src/context/: AutoComplete.tsx  useAI.ts  useCatalog.ts  useCompatibility.ts
pc-advisor/: __init__.py  llm.py
pc_advisor/: api.py  cli.py  compatibility.py  config.py  dataset.py  models.py  prompt.py
tests/: conftest.py  test_compatibility.py  test_func2.py  test_models.py
